manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: backend-api
          image: ${IMAGE}
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 12
            timeoutSeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "60m"
              memory: "100Mi"
            limits:
              cpu: "100m"
              memory: "120Mi"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  selector:
    app: backend-api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
